# hydrograph-py

./: pyproject.toml  requirements.txt  setup.py
hydrograph/: __init__.py  _host.py  general.py  minify.py
test/: test_minify.py
