[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'hydrograph-py'
description = "Build datasets for publication on hydrograph"
keywords = ["hydrograph", "dataset"]
license = {text = "ISC License"}
version = "0.1"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = ["requests", "pandas"]
authors = [
    {name = "Joel Rahman", email = "joel@flowmatters.com.au"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
# dynamic = ["test_suite"]

[project.urls]
Homepage = "https://github.com/flowmatters/hydrograph-py"

# [project.optional-dependencies]
# test = ["pytest"]

# [tool.setuptools.packages.find]

[tools.setuptools]
include-package-data = true
zip-safe = true
packages = ["hydrograph"]
py-modules = ["hydrograph"]